control/chameleon_zf90.F90


  interface
     function CHAMELEON_zgetrf_Tile_Async_c(A,IPIV,sequence,request) &
          & bind(c, name='CHAMELEON_zgetrf_Tile_Async')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zgetrf_Tile_Async_c
       type(c_ptr), value :: A
       type(c_ptr), value :: IPIV
       type(c_ptr), value :: sequence
       type(c_ptr), value :: request
     end function CHAMELEON_zgetrf_Tile_Async_c
  end interface

  interface
     function CHAMELEON_zgetrf_incpiv_Tile_Async_c(A,L,IPIV,sequence,request) &
          & bind(c, name='CHAMELEON_zgetrf_incpiv_Tile_Async')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zgetrf_incpiv_Tile_Async_c
       type(c_ptr), value :: A
       type(c_ptr), value :: L
       type(c_ptr), value :: IPIV
       type(c_ptr), value :: sequence
       type(c_ptr), value :: request
     end function CHAMELEON_zgetrf_incpiv_Tile_Async_c
  end interface

  interface
     function CHAMELEON_zgetrf_nopiv_Tile_Async_c(A,sequence,request) &
          & bind(c, name='CHAMELEON_zgetrf_nopiv_Tile_Async')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zgetrf_nopiv_Tile_Async_c
       type(c_ptr), value :: A
       type(c_ptr), value :: sequence
       type(c_ptr), value :: request
     end function CHAMELEON_zgetrf_nopiv_Tile_Async_c
  end interface

  interface
     function CHAMELEON_zgetri_Tile_Async_c(A,IPIV,W,sequence,request) &
          & bind(c, name='CHAMELEON_zgetri_Tile_Async')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zgetri_Tile_Async_c
       type(c_ptr), value :: A
       type(c_ptr), value :: IPIV
       type(c_ptr), value :: W
       type(c_ptr), value :: sequence
       type(c_ptr), value :: request
     end function CHAMELEON_zgetri_Tile_Async_c
  end interface

  interface
     function CHAMELEON_zgetrs_Tile_Async_c(trans,A,IPIV,B,sequence,request) &
          & bind(c, name='CHAMELEON_zgetrs_Tile_Async')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zgetrs_Tile_Async_c
       integer(kind=c_int), value :: trans
       type(c_ptr), value :: A
       type(c_ptr), value :: IPIV
       type(c_ptr), value :: B
       type(c_ptr), value :: sequence
       type(c_ptr), value :: request
     end function CHAMELEON_zgetrs_Tile_Async_c
  end interface

  interface
     function CHAMELEON_zgetrs_incpiv_Tile_Async_c(A,L,IPIV,B,sequence,request) &
          & bind(c, name='CHAMELEON_zgetrs_incpiv_Tile_Async')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zgetrs_incpiv_Tile_Async_c
       type(c_ptr), value :: A
       type(c_ptr), value :: L
       type(c_ptr), value :: IPIV
       type(c_ptr), value :: B
       type(c_ptr), value :: sequence
       type(c_ptr), value :: request
     end function CHAMELEON_zgetrs_incpiv_Tile_Async_c
  end interface

  interface
     function CHAMELEON_zheev_Tile_Async_c(jobz,uplo,A,W,T,Q,LDQ,sequence,request) &
          & bind(c, name='CHAMELEON_zheev_Tile_Async')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zheev_Tile_Async_c
       integer(kind=c_int), value :: jobz
       integer(kind=c_int), value :: uplo
       type(c_ptr), value :: A
       type(c_ptr), value :: W
       type(c_ptr), value :: T
       type(c_ptr), value :: Q
       integer(kind=c_int), value :: LDQ
       type(c_ptr), value :: sequence
       type(c_ptr), value :: request
     end function CHAMELEON_zheev_Tile_Async_c
  end interface

  interface
     function CHAMELEON_zheevd_Tile_Async_c(jobz,uplo,A,W,T,Q,LDQ,sequence,request) &
          & bind(c, name='CHAMELEON_zheevd_Tile_Async')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zheevd_Tile_Async_c
       integer(kind=c_int), value :: jobz
       integer(kind=c_int), value :: uplo
       type(c_ptr), value :: A
       type(c_ptr), value :: W
       type(c_ptr), value :: T
       type(c_ptr), value :: Q
       integer(kind=c_int), value :: LDQ
       type(c_ptr), value :: sequence
       type(c_ptr), value :: request
     end function CHAMELEON_zheevd_Tile_Async_c
  end interface

  interface
     function CHAMELEON_zhegst_Tile_Async_c(itype,uplo,A,B,sequence,request) &
          & bind(c, name='CHAMELEON_zhegst_Tile_Async')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zhegst_Tile_Async_c
       integer(kind=c_int), value :: itype
       integer(kind=c_int), value :: uplo
       type(c_ptr), value :: A
       type(c_ptr), value :: B
       type(c_ptr), value :: sequence
       type(c_ptr), value :: request
     end function CHAMELEON_zhegst_Tile_Async_c
  end interface

  interface
     function CHAMELEON_zhegv_Tile_Async_c(itype,jobz,uplo,A,B,W,T,Q,sequence,request) &
          & bind(c, name='CHAMELEON_zhegv_Tile_Async')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zhegv_Tile_Async_c
       integer(kind=c_int), value :: itype
       integer(kind=c_int), value :: jobz
       integer(kind=c_int), value :: uplo
       type(c_ptr), value :: A
       type(c_ptr), value :: B
       type(c_ptr), value :: W
       type(c_ptr), value :: T
       type(c_ptr), value :: Q
       type(c_ptr), value :: sequence
       type(c_ptr), value :: request
     end function CHAMELEON_zhegv_Tile_Async_c
  end interface

  interface
     function CHAMELEON_zhegvd_Tile_Async_c(itype,jobz,uplo,A,B,W,T,Q,sequence,request) &
          & bind(c, name='CHAMELEON_zhegvd_Tile_Async')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zhegvd_Tile_Async_c
       integer(kind=c_int), value :: itype
       integer(kind=c_int), value :: jobz
       integer(kind=c_int), value :: uplo
       type(c_ptr), value :: A
       type(c_ptr), value :: B
       type(c_ptr), value :: W
       type(c_ptr), value :: T
       type(c_ptr), value :: Q
       type(c_ptr), value :: sequence
       type(c_ptr), value :: request
     end function CHAMELEON_zhegvd_Tile_Async_c
  end interface

#if defined(PRECISION_z) || defined(PRECISION_c)
  interface
     function CHAMELEON_zhemm_Tile_Async_c(side,uplo,alpha,A,B,beta,C,sequence,request) &
          & bind(c, name='CHAMELEON_zhemm_Tile_Async')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zhemm_Tile_Async_c
       integer(kind=c_int), value :: side
       integer(kind=c_int), value :: uplo
       complex(kind=c_double_complex), value :: alpha
       type(c_ptr), value :: A
       type(c_ptr), value :: B
       complex(kind=c_double_complex), value :: beta
       type(c_ptr), value :: C
       type(c_ptr), value :: sequence
       type(c_ptr), value :: request
     end function CHAMELEON_zhemm_Tile_Async_c
  end interface
#endif

#if defined(PRECISION_z) || defined(PRECISION_c)
  interface
     function CHAMELEON_zher2k_Tile_Async_c(uplo,trans,alpha,A,B,beta,C,sequence,request) &
          & bind(c, name='CHAMELEON_zher2k_Tile_Async')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zher2k_Tile_Async_c
       integer(kind=c_int), value :: uplo
       integer(kind=c_int), value :: trans
       complex(kind=c_double_complex), value :: alpha
       type(c_ptr), value :: A
       type(c_ptr), value :: B
       real(kind=c_double), value :: beta
       type(c_ptr), value :: C
       type(c_ptr), value :: sequence
       type(c_ptr), value :: request
     end function CHAMELEON_zher2k_Tile_Async_c
  end interface
#endif

#if defined(PRECISION_z) || defined(PRECISION_c)
  interface
     function CHAMELEON_zherk_Tile_Async_c(uplo,trans,alpha,A,beta,C,sequence,request) &
          & bind(c, name='CHAMELEON_zherk_Tile_Async')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zherk_Tile_Async_c
       integer(kind=c_int), value :: uplo
       integer(kind=c_int), value :: trans
       real(kind=c_double), value :: alpha
       type(c_ptr), value :: A
       real(kind=c_double), value :: beta
       type(c_ptr), value :: C
       type(c_ptr), value :: sequence
       type(c_ptr), value :: request
     end function CHAMELEON_zherk_Tile_Async_c
  end interface
#endif

  interface
     function CHAMELEON_zhetrd_Tile_Async_c(jobz,uplo,A,D,E,T,Q,LDQ,sequence,request) &
          & bind(c, name='CHAMELEON_zhetrd_Tile_Async')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zhetrd_Tile_Async_c
       integer(kind=c_int), value :: jobz
       integer(kind=c_int), value :: uplo
       type(c_ptr), value :: A
       type(c_ptr), value :: D
       type(c_ptr), value :: E
       type(c_ptr), value :: T
       type(c_ptr), value :: Q
       integer(kind=c_int), value :: LDQ
       type(c_ptr), value :: sequence
       type(c_ptr), value :: request
     end function CHAMELEON_zhetrd_Tile_Async_c
  end interface

  interface
     function CHAMELEON_zlacpy_Tile_Async_c(uplo,A,B,sequence,request) &
          & bind(c, name='CHAMELEON_zlacpy_Tile_Async')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zlacpy_Tile_Async_c
       integer(kind=c_int), value :: uplo
       type(c_ptr), value :: A
       type(c_ptr), value :: B
       type(c_ptr), value :: sequence
       type(c_ptr), value :: request
     end function CHAMELEON_zlacpy_Tile_Async_c
  end interface

  interface
     function CHAMELEON_zlange_Tile_Async_c(norm,A,work,value,sequence,request) &
          & bind(c, name='CHAMELEON_zlange_Tile_Async')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zlange_Tile_Async_c
       integer(kind=c_int), value :: norm
       type(c_ptr), value :: A
       type(c_ptr), value :: work
       type(c_ptr), value :: value
       type(c_ptr), value :: sequence
       type(c_ptr), value :: request
     end function CHAMELEON_zlange_Tile_Async_c
  end interface

#if defined(PRECISION_z) || defined(PRECISION_c)
  interface
     function CHAMELEON_zlanhe_Tile_Async_c(norm,uplo,A,work,value,sequence,request) &
          & bind(c, name='CHAMELEON_zlanhe_Tile_Async')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zlanhe_Tile_Async_c
       integer(kind=c_int), value :: norm
       integer(kind=c_int), value :: uplo
       type(c_ptr), value :: A
       type(c_ptr), value :: work
       type(c_ptr), value :: value
       type(c_ptr), value :: sequence
       type(c_ptr), value :: request
     end function CHAMELEON_zlanhe_Tile_Async_c
  end interface
#endif

  interface
     function CHAMELEON_zlansy_Tile_Async_c(norm,uplo,A,work,value,sequence,request) &
          & bind(c, name='CHAMELEON_zlansy_Tile_Async')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zlansy_Tile_Async_c
       integer(kind=c_int), value :: norm
       integer(kind=c_int), value :: uplo
       type(c_ptr), value :: A
       type(c_ptr), value :: work
       type(c_ptr), value :: value
       type(c_ptr), value :: sequence
       type(c_ptr), value :: request
     end function CHAMELEON_zlansy_Tile_Async_c
  end interface

  interface
     function CHAMELEON_zlaset_Tile_Async_c(uplo,alpha,beta,A,sequence,request) &
          & bind(c, name='CHAMELEON_zlaset_Tile_Async')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zlaset_Tile_Async_c
       integer(kind=c_int), value :: uplo
       complex(kind=c_double_complex), value :: alpha
       complex(kind=c_double_complex), value :: beta
       type(c_ptr), value :: A
       type(c_ptr), value :: sequence
       type(c_ptr), value :: request
     end function CHAMELEON_zlaset_Tile_Async_c
  end interface
